2009-08-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas_hg/hg_add_hosts.c (hg_add_comma_delimited_hosts):
	Minimal cosmetics/doc.

2009-08-17  Matthew Mundell <matthew.mundell@intevation.de>

	* ChangeLog: Switch to full email address.

2009-08-17  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas/services1.c (nessus_init_svc):
	Added RATS:ignore flag where memcopy limit is sane.
	
	* libopenvas/openvas_auth.c (get_password_hashes):
	Added RATS:ignore flag where statically sized buffer is sanely used.

2009-08-17  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas/plugutils.c (nessuslib_version):
	Added RATS:ignore flag where statically sized char buffer is used
	in a sane manner.

2009-08-17  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas/plugutils.c (proto_post_wrapped):
	Removed unused variable i.

2009-08-17  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* base/nvti.c (nvti_as_openvas_nvt_cache_entry):
	Corrected doc.

	* base/nvti.h (struct nvtpref):
	Made comments 'available' for doxygen, although these members should
	not be accessed directly.

2009-08-14  Matthew Mundell <matthew.mundell@intevation.de>

	* libopenvas/openvas_auth.c (openvas_authenticate): Improve doc.  Return 1
	on g_file_get_contents fail, as this is most probably an auth failure.

2009-08-14  Matthew Mundell <matthew.mundell@intevation.de>

	* libopenvas/openvas_logging.c (openvas_log_func): Add log_domain NULL
	guard.

2009-08-13  Matthew Mundell <matthew.mundell@intevation.de>

	* libopenvas/openvas_logging.c (setup_log_handlers): Adjust the * check
	so that the * case also goes on to the next item.

2009-08-13  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* doc/Doxyfile,
	doc/Doxyfile_full:
	Added 'base' to input paths.

2009-08-13  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* base/certificate.h (certificate_t, certificates_t):