@@ -19,21 +19,21 @@ include/libopenvas.h
 include/libvers.h.in
 INSTALL_README
 install-sh
-libopenvas_hg/hg_add_hosts.c
-libopenvas_hg/hg_add_hosts.h
-libopenvas_hg/hg_debug.c
-libopenvas_hg/hg_dns_axfr.c
-libopenvas_hg/hg_dns_axfr.h
-libopenvas_hg/hg_filter.c
-libopenvas_hg/hg_filter.h
-libopenvas_hg/hg_subnet.c
-libopenvas_hg/hg_subnet.h
-libopenvas_hg/hg_utils.c
-libopenvas_hg/hg_utils.h
-libopenvas_hg/hosts_gatherer.c
-libopenvas_hg/hosts_gatherer.h
-libopenvas_hg/Makefile
-libopenvas_hg/test.c
+hg/hg_add_hosts.c
+hg/hg_add_hosts.h
+hg/hg_debug.c
+hg/hg_dns_axfr.c
+hg/hg_dns_axfr.h
+hg/hg_filter.c
+hg/hg_filter.h
+hg/hg_subnet.c
+hg/hg_subnet.h
+hg/hg_utils.c
+hg/hg_utils.h
+hg/hosts_gatherer.c
+hg/hosts_gatherer.h
+hg/Makefile
+hg/test.c
 libopenvas/arglists.c
 libopenvas/arglists.h
 libopenvas/bpf_share.h
